# amxxarch

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
include/: thread.h
include/cssdk/engine/: rehlds_api.h  rehlds_interfaces.h
include/metamod/: osdep.h
src/: 7zip.cpp  amxxapi.cpp  amxxapi.h  amxxmodule.cpp  amxxmodule.h  dllapi.cpp  engine_api.cpp  force_link_glibc_2.5.h  glibc_ver.cpp  main.cpp  main.h  meta_api.cpp  moduleconfig.h  precompiled.h  stdc++compat.cpp  test.cpp
src/glibc_comp/: CXXABI_libstdc++.h  GCC_libstdc++.h  coolNewScript.sh  coolNewScript1.sh  coolNewScript4.sh  coolNewScript5.sh  coolNewScript6.sh  coolNewScript7.sh
src/glibc_comp/save/: CXXABI_libstdc++.h  CXXABI_libstdc++.h.redef  GCC_.h  GCC_.h.redef  GCC_libstdc++.h  GCC_libstdc++.h.redef  GLIBCXX_libstdc++.h  GLIBCXX_libstdc++.h.redef  GLIBC_.h  GLIBC_.h.redef  GLIBC_libstdc++.h.redef  gcc_libc_symvers.h
unrar/: CMakeLists.txt
